Doing the Layout

--- a/src/App.css
+++ b/src/App.css
@@ -1,48 +1,33 @@
 .App {
+  background-color: #282c34;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  font-size: calc(10px + 2vmin);
+  color: white;
+  margin: auto;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-footer {
   background-color: #282c34;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(8px + 2vmin);
-  color: white;
+  text-align: center;
+  margin: auto;
+}
+
+.App-footer > h1 {
+  text-align: right;
+  border: 3px solid #73AD21 !important;
+}
+
+.App-footer > div {
+  width:100%;
+  text-align: center !important;
+  
+  margin: auto !important;
 }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
